# aicli

./: .gitignore  Dockerfile  MANIFEST.in  README.md  aicli.spec  aicli_parameters.yml.sample  assisted-service-client.spec  certifi.spec  cluster_deploy.sh  dual.yml.sample  kfish.md  pypi.sh  pyproject.toml  python3-certifi.spec  setup.py  setup_kfish.py  static_network_config.yml_multiple.sample
.github/: aicli_parameters.yml  build.sh  container_controller.sh  copr.sh  kcli_plan.yml  linting.sh  prep.sh  release.sh  release_snapshot.sh  scale_parameters.yml
.github/workflows/: auto.yml  ci.yml  deploy.yml  deploy_cluster.yml  nightly.yml  nightly.yml.disabled  nightly_scale.yml  scale_cluster.yml  snapshot.yml
ailib/: __init__.py  cli.py
ailib/agent/: agent-cluster-install-sno.yaml  (+6 more)
ansible-modules/: README.md
doc/: conf.py  index.md  index.rst
docs/: howto_kcli+aicli.md  index.md  index.rst  requirements.txt
extras/: certifi.txt  onprem_openshift.yml
kcli_plan/: aicli.sh  deploy.sh  deploy_cluster.sh  install.sh  installer.sh  kcli_plan.yml  kcli_plan_default.yml  kcli_plan_infra.yml  kcli_plan_infra_default.yml  kcli_plan_saas.yml  minikube.sh  notify.sh  pre.sh  racadm.sh
kcli_plans/: kcli_default.yml  kcli_plan.yml  minikube.sh  virtual_infrastructure.yml
samples/: aicli_parameters.yml  bili.yml  billi.yml  billi_disconnected.yml  billi_disconnected_dual.yml  billi_disconnected_ipv6.yml  bonding.yml  bonding_kcli_plan.yml  disconnected.yml  dual.yml  static_network_config.yml  static_network_config_kcli_plan.yml  static_network_config_sno.yml
(+39 files in other folders)
